# BlueLink

./: .gitignore  HLD.md  LLD.md  PRD.md  README.md  TECHNICAL_PRD.md
.claude/: settings.local.json
service/: pyproject.toml  requirements.txt
service/bluelink/: __init__.py  __main__.py  config.py  constants.py  logging_setup.py  profile.py
service/bluelink/ble/: central.py  fake.py  interface.py  peripheral.py
service/bluelink/core/: envelope.py  framing.py  router.py  session.py
service/bluelink/web/: protocol.py  server.py
service/spike/: client_spike.py  host_spike.py
service/tests/: test_core.py  test_framing.py  test_protocol.py  test_server.py
ui/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  styles.css
ui/src/api/: ws.js
ui/src/components/: Avatar.jsx  ChatWindow.jsx  Composer.jsx  ConversationScreen.jsx  DeviceCard.jsx  DiscoverScreen.jsx  Lobby.jsx  MessageList.jsx  Signal.jsx  StatusBar.jsx
ui/src/lib/: identity.js
ui/src/state/: store.js
