[project]
name = "bluelink"
version = "0.1.0"
description = "Serverless, off-grid BLE chat for laptops (companion service)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bleak==0.20.2",
    "bless==0.2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bluelink*"]
